<resources>
    <string name="app_name">Android Retrofit</string>
    <string name="signUp">Sign Up</string>
    <string name="edtEmail">Email</string>
    <string name="edtPass">Password</string>
    <string name="edtName">Name</string>
    <string name="edtSchool">School</string>
    <string name="txtLogin">Already have a Account?\nClick to Login</string>
    <string name="txtRegister">Don`t have an Account?\nClick to Register</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="user">User</string>
    <string name="settings">Settings</string>
    <string name="txtUpdate">Update Profile</string>
    <string name="save">Save</string>
    <string name="txtChange">Change Password</string>
    <string name="currentPassword">Current Password</string>
    <string name="newPassword">New Password</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete Profile</string>
</resources>
