<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtUpdate"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        <EditText
            android:id="@+id/edtUpdateEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:hint="@string/edtEmail"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_email" />

        <EditText
            android:id="@+id/edtUpdateName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_name"
            android:drawablePadding="5dp"
            android:hint="@string/edtName"
            android:inputType="textPersonName"
            android:drawableLeft="@drawable/ic_name" />

        <EditText
            android:id="@+id/edtUpdateSchool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_school"
            android:drawablePadding="5dp"
            android:hint="@string/edtSchool"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_school" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/colorFormBackground"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtChange"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        <EditText
            android:id="@+id/edtCurrentPasword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_password"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="5dp"
            android:hint="@string/currentPassword"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/edtNewPasword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_password"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="5dp"
            android:hint="@string/newPassword"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btnChange"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:text="@string/txtChange"
            android:textAllCaps="false"
            android:textColor="@color/colorFormBackground"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@color/colorFormBackground"/>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="@color/colorDanger"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@color/colorFormBackground"/>
        
    </LinearLayout>

</ScrollView>